# Computer_graphics_template

./: Bindings.cpp  Bindings.h  BoundingBox.cpp  BoundingBox.h  BoundingBoxes.cpp  BoundingBoxes.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.hpp  CameraAnimation.cpp  CameraAnimation.h  Collisions.cpp  Collisions.h  CommonGroupings.h  DayNightCycle.cpp  DayNightCycle.h  GlobalConfigs.cpp  GlobalConfigs.h  GlobalObjects.cpp  GlobalObjects.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.hpp  Model3D.cpp  Model3D.hpp  Mouse.cpp  Mouse.h  Others.cpp  Others.h  Scene.cpp  Scene.h  Shader.cpp  Shader.hpp  Window.cpp  Window.h  main.cpp  pure_functions.cpp  (+1 more)
libs/glm/gtx/: transform.hpp
shaders/: backup.frag  backup.vert  basic.frag  basic.vert  depthMapView.frag  fragPosLightSpaceView.frag  fragPosLightSpaceView.vert  simpleDepth.frag
